# accumulatorGSIPP

./: .gitignore  Cargo.toml
SnifferESP/: Cargo.toml  ESP32_SETUP_GUIDE.md  FLOW_DIAGRAM.md  README.md  convert_proof_to_array.py  setup_firewall.ps1  setup_wsl_firewall.sh  setup_wsl_firewall_v2.sh  udp_relay.ps1  upload_proof_to_esp.py
SnifferESP/esp32_sensor/: README.md  esp32_sensor.ino  platformio.ini
SnifferESP/proofs/: ESP_01.proof  ESP_02.proof  ESP_42.proof
SnifferESP/src/: main.rs  setup.rs
interfaceCBOR/: test.rs
src/: accumulator.rs  util.rs
src/group/: class.rs  mod.rs  ristretto.rs  rsa.rs
src/proof/: poe.rs  poke2.rs
